fix: fix cursor z-index

--- a/src/components/Cursor/Cursor.module.scss
+++ b/src/components/Cursor/Cursor.module.scss
@@ -1,6 +1,6 @@
 .cursor-dot,
 .cursor-dot-outline {
-  z-index: 999;
+  z-index: 900;
   pointer-events: none;
   position: absolute;
   top: 50%;
